src/components/Digits/Digit/digit.css
.digit {
  display: grid;
  grid-template: 1fr 1fr 3fr 1fr 1fr / 1fr;
  place-items: stretch;

  color: var(--font-color-1);
  background: var(--color-1);
  box-shadow: var(--shadow-1);

  font-family: var(--font-digits);
}

/* middle wrapper, decoration */

.digit > div {
  grid-row: 2 / span 3;
  grid-column: 1;

  width: 100%;
  height: 100%;
  background: var(--color-2);
  box-shadow: var(--shadow-2);
}

/* Labels */

.digit span {
  font-size: 0.65rem;
  width: 100%;
  height: 100%;

  display: grid;
  place-content: center;
  user-select: none;

  word-wrap: none;
  overflow: hidden;
  text-overflow: ellipsis;
}

.digit span:nth-of-type(1) {
  grid-row: 1;
  grid-column: 1;
}

.digit span:nth-of-type(2) {
  grid-row: 5;
  grid-column: 1;
}

/* Incrementors */

.digit button {
  border: none;
  outline: none;

  width: 100%;
  height: 100%;
  background: transparent;
  cursor: pointer;
}

.digit button:nth-of-type(1) {
  grid-row: 2;
  grid-column: 1;
}

.digit button:nth-of-type(2) {
  grid-row: 4;
  grid-column: 1;
}

/* Incrementors SVG Icon */

.digit svg {
  width: 12.5%;
  height: 100%;
  fill: var(--color-1);
}

.digit button:nth-of-type(1) svg {
  /* same icon for incrementor/decrementor */
  transform: rotate(0.5turn);
}

.digit button:active svg {
  transform: scale(0.75);
}

.digit button:nth-of-type(1):active svg {
  transform: rotate(0.5turn) scale(0.75);
}

/* Input/Digit */

.digit input[type=text] {
  grid-row: 3;
  grid-column: 1;  

  width: 100%;
  height: 100%;
  border: none;
  outline: none;

  text-align: center;
  font-size: 2rem;
  font-family: inherit;

  background: var(--color-3);
  box-shadow: var(--shadow-3);
}

/* border-radius */

.digit,
.digit > div,
.digit input[type=text] {
  border-radius: 20px;
}

